# rpq

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.cpp  main.cpp  par_regular_path_query.cpp  parse_mem.py  regular_path_query.cpp  regular_path_query.hpp  tests.cpp  timer.hpp
.github/workflows/: ubuntu.yml
scripts/: analize_queries.py  analize_trasnspose_time.py  graph.py  main.py  rpqbench.py  wikidata.py
scripts/data/cpu/old/rpqbench-100kk/: all.txt
scripts/data/cpu/old/rpqbench-10kk/: all.txt
scripts/data/cpu/old/wikidata/: all.txt
scripts/data/cpu/rpqbench-10kk/: result.txt  result1.txt  result10.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt
scripts/data/cpu/wikidata/: collect.py  result.txt  result1.txt  result10.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt
scripts/data/gpu/old/rpqbench-100kk/: result.txt
scripts/data/gpu/old/rpqbench-100kk-rtx3050/: result.txt
scripts/data/gpu/old/rpqbench-100kk-rtx3050/queries_logs/: 1029.txt  1038.txt  107.txt  1075.txt  1100.txt  1101.txt  1181.txt  1295.txt  1305.txt  1372.txt  1511.txt  1533.txt  1548.txt  1554.txt  1573.txt  1576.txt  1590.txt  1647.txt  1740.txt  1760.txt  1767.txt  1863.txt  1866.txt  1901.txt  1982.txt  216.txt  313.txt  315.txt  374.txt  520.txt  545.txt  590.txt  611.txt  62.txt  620.txt  658.txt  664.txt  673.txt  696.txt  757.txt  (+6 more)
scripts/data/gpu/old/rpqbench-100kk/queries_logs/: 1002.txt  1024.txt  1185.txt  1196.txt  1337.txt  1404.txt  152.txt  1542.txt  1543.txt  1557.txt  1564.txt  1600.txt  1700.txt  1972.txt  280.txt  283.txt  337.txt  50.txt  512.txt  612.txt  624.txt  704.txt  845.txt  917.txt  991.txt
scripts/data/gpu/old/rpqbench-10kk/: old_result.txt  result.txt
scripts/data/gpu/old/rpqbench-10kk/queries_logs/: 10741.txt  10860.txt  11089.txt  11223.txt  11351.txt  11496.txt  12198.txt  12236.txt  13498.txt  13965.txt  14120.txt  14267.txt  15038.txt  15127.txt  15335.txt  1553.txt  15564.txt  15893.txt  15909.txt  16021.txt  17777.txt  18847.txt  3437.txt  3973.txt  4804.txt  50.txt  5399.txt  5889.txt  5897.txt  6205.txt  6671.txt  6813.txt  6997.txt  8490.txt  879.txt  9144.txt
scripts/data/gpu/old/wikidata/: result.txt
scripts/data/gpu/old/wikidata/queries_logs/: 105.txt  11.txt  115.txt  124.txt  125.txt  126.txt  127.txt  132.txt  137.txt  139.txt  144.txt  146.txt  148.txt  150.txt  153.txt  156.txt  159.txt  161.txt  162.txt  167.txt  169.txt  171.txt  172.txt  174.txt  177.txt  179.txt  189.txt  195.txt  204.txt  207.txt  208.txt  210.txt  212.txt  213.txt  214.txt  217.txt  218.txt  226.txt  228.txt  229.txt  (+107 more)
scripts/data/gpu/rpqbench-100kk/: collect.py  result.txt  result1.txt  result10.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt
scripts/data/gpu/rpqbench-10kk/: calc.py  result.txt  result1.txt  result10.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt
scripts/data/gpu/wikidata/: result.txt  result1.txt  result10.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt
scripts/data/rtx3090/old/rpqbench-100kk/: result.txt
scripts/data/rtx3090/old/rpqbench-100kk/queries_logs/: 1014.txt  1049.txt  1095.txt  1101.txt  1105.txt  1181.txt  1185.txt  1196.txt  1208.txt  134.txt  1374.txt  1391.txt  1393.txt  1421.txt  1505.txt  1511.txt  1526.txt  1539.txt  1542.txt  1543.txt  1552.txt  1557.txt  157.txt  1573.txt  1576.txt  1590.txt  1600.txt  1602.txt  1670.txt  1742.txt  1767.txt  1778.txt  1807.txt  1834.txt  1938.txt  1980.txt  1990.txt  201.txt  214.txt  268.txt  (+29 more)
scripts/data/rtx3090/old/rpqbench-10kk/: result.txt
scripts/data/rtx3090/old/rpqbench-10kk/queries_logs/: 10370.txt  1076.txt  10821.txt  10823.txt  10922.txt  11398.txt  11930.txt  11941.txt  12796.txt  13787.txt  14076.txt  15049.txt  15052.txt  15089.txt  15205.txt  15713.txt  1575.txt  15861.txt  15885.txt  15956.txt  16941.txt  17538.txt  17965.txt  18010.txt  19702.txt  19872.txt  19960.txt  2089.txt  2271.txt  2708.txt  3273.txt  3674.txt  4998.txt  51.txt  5667.txt  5862.txt  6021.txt  6517.txt  7448.txt  7726.txt  (+1 more)
scripts/data/rtx3090/old/wikidata/: result.txt
scripts/data/rtx3090/old/wikidata/queries_logs/: 105.txt  115.txt  124.txt  125.txt  126.txt  127.txt  132.txt  137.txt  139.txt  144.txt  146.txt  148.txt  150.txt  153.txt  156.txt  159.txt  161.txt  162.txt  166.txt  167.txt  169.txt  172.txt  174.txt  177.txt  179.txt  195.txt  2.txt  204.txt  207.txt  208.txt  210.txt  212.txt  213.txt  214.txt  217.txt  218.txt  221.txt  224.txt  226.txt  228.txt  (+107 more)
test_data/: 1_expected.txt  2_expected.txt  3_expected.txt  4_b.mtx  4_expected.txt  62.mtx  a.mtx  b.mtx
test_data/example/: automat_a.mtx  automat_b.mtx  expected.txt  graph_a.mtx  graph_b.mtx
